--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Bryan Chan"
-  avatar           : "mscac.jpeg"
+  avatar           : "profile.jpeg"
   bio              : ""
   location         : "Toronto"
   employer         : "Kindred AI & University of Toronto"
