--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "profile.jpeg"
   bio              : ""
   location         : "Toronto"
-  employer         : ""
+  employer         : "University of Alberta"
   googlescholar    : "https://scholar.google.com/citations?user=Gy7DMdcAAAAJ"
   email            : "chanb@cs.toronto.edu"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
