updated contact info

--- a/_config.yml
+++ b/_config.yml
@@ -83,10 +83,10 @@ author:
   name             : "Bryan Chan"
   avatar           : "profile.jpeg"
   bio              : ""
-  location         : "Toronto"
+  location         : "Edmonton"
   employer         : "University of Alberta"
   googlescholar    : "https://scholar.google.com/citations?user=Gy7DMdcAAAAJ"
-  email            : "chanb@cs.toronto.edu"
+  email            : "bryan.chan@ualberta.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
