--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,3 +5,6 @@ main:
 
   - title: "Publications"
     url: /publications/
+
+  - title: "Resume"
+    url: https://github.com/chanb/chanb.github.io/tree/master/assets/Bryan_Chan_Resume.pdf
