--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,4 +7,4 @@ main:
     url: /publications/
 
   - title: "Resume"
-    url: https://github.com/chanb/chanb.github.io/tree/master/assets/Bryan_Chan_Resume.pdf
+    url: /assets/Bryan_Chan_Resume.pdf
